# mcp-think-tank-py

./: README.md  kg-think-mcp.md  pyproject.toml  setup.py  test_datetime_serialization.py  test_entity.py  test_json_serialization.py
.cursor/rules/: mcp-think-tank.mdc
mcp_think_tank.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  cli.py  config.py  orchestrator.py  server.py
src/tools/: __init__.py  cache.py  circuit_breaker.py  code_tools.py  dag_orchestrator.py  db.py  embedding.py  embeddings.py  memory.py  monitoring.py  tasks.py  think.py  thinkentity.py  workflow_error_handler.py  workflow_templates.py
src/watchers/: __init__.py  file_watcher.py
tests/: test_circuit_breaker.py  test_server.py  test_server_pytest.py
