[project]
name = "mcp-think-tank-py"
version = "0.1.0"
description = "Python implementation of MCP Think Tank using FastMCP V2 - a next-generation knowledge graph and reasoning tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"
