[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-think-tank"
version = "0.1.0"
description = "MCP Think Tank - Advanced knowledge graph and reasoning tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MCP Think Tank Team", email = "example@example.com"}
]

dependencies = [
    "fastmcp>=2.0.0",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.0.0",
    "tqdm",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.5.0",
]
local-llm = [
    "huggingface_hub",
    "torch",
    "transformers",
    "accelerate",
]
embeddings = [
    "sentence-transformers",
    "numpy>=1.24.0",
]
all = [
    "anthropic>=0.5.0",
    "huggingface_hub",
    "torch",
    "transformers",
    "accelerate",
    "sentence-transformers",
]

[project.scripts]
mcp-think-tank = "src.cli:main"

[tool.setuptools]
packages = ["src"]
